<resources>
    <string name="app_name">Github User`s</string>
    <string name="app_name_detail_user">Detail User</string>
    <string name="app_name_settings">Settings</string>
    <string name="app_name_favorite">Favorite User</string>
    <string name="menu_settings">Menu Settings</string>
    <string name="menu_favorite">Menu Favorite</string>
    <string name="menu_settings_activity">Ini adalah menu settings</string>
    <string name="my_name">Jake Wharton</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="username_text">Cari berdasarkan username</string>
    <string name="search_hint">Masukkan username</string>
    <string name="username">@%1$s</string>
    <string name="follower_text">Follower</string>
    <string name="following_text">Following</string>
    <string name="repository_text">Repository</string>
    <string name="follower_value">0</string>
    <string name="following_value">0</string>
    <string name="repository_value">0</string>
    <string name="location_text">Lokasi</string>
    <string name="location_value">Pittsburgh, PA, USA</string>
    <string name="company_text">Perusahaan</string>
    <string name="company_value">Google, Inc.</string>
    <string name="image_splashscreen">image_splashscreen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_follower">Follower</string>
    <string name="tab_text_following">Following</string>
    <string name="content_tab_follower">This is Tab Follower</string>
    <string name="content_tab_following">This is Tab Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="delete">Hapus</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah Anda ingin membatalkan perubahan item favorite?</string>
    <string name="message_delete">Apakah Anda yakin ingin menghapus item ini dari daftar favorite?</string>
    <string name="added">Satu item berhasil difavoritkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus dari daftar favorit</string>
    <string name="data_empty">Tidak ada data..</string>
    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>
    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>
    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>
    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>
    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>
    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>
    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>
</resources>


