<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_item_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_avatar"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_avatar"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_avatar"
            tools:text="@string/my_name"
            style="@style/TextContent"/>

        <TextView
            android:id="@+id/tv_item_follower_text"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/follower_text"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_item_avatar"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_avatar"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_item_follower_value"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            card_view:layout_constraintStart_toEndOf="@+id/tv_item_follower_text"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:text="@string/follower_value"/>

        <TextView
            android:id="@+id/tv_item_following_text"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toEndOf="@+id/tv_item_follower_value"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            android:text="@string/following_text"/>

        <TextView
            android:id="@+id/tv_item_following_value"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toEndOf="@+id/tv_item_following_text"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:text="@string/following_value"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>